--- a/hexo/source/_posts/2017-07-23.md
+++ b/hexo/source/_posts/2017-07-23.md
@@ -1,6 +1,7 @@
 ---
-title: 'OpenGL 2 从Shader了解计算机三维渲染过程'
+title: 'OpenGL 2 了解计算机三维渲染过程'
 date: 2017-07-23 19:06:52
+categories: "技术积累" #文章分類目錄 可以省略
 tags:
     - opengl
 ---
