--- a/hexo/source/_posts/2018-06-05.md
+++ b/hexo/source/_posts/2018-06-05.md
@@ -1,10 +1,11 @@
 ---
 title: 'Learn Volumetric Light'
 date: 2018-06-05 00:02:34
+categories: 技术积累 #文章分類目錄 可以省略
 tags:
-    'computer visulization'
-    'shaders'
-    'opengl'
+    - 'computer visulization'
+    - 'shaders'
+    - 'opengl'
 ---
 
 [原文在这里][1],受益良多
